--- a/app/styles/app/pages/landing.scss
+++ b/app/styles/app/pages/landing.scss
@@ -1017,7 +1017,7 @@
     width: 100%;
     border-top-right-radius: 0;
     border-top-left-radius: 0;
-    z-index: 10;
+    z-index: 35;
 
     .action {
       cursor: pointer;
@@ -1035,7 +1035,7 @@
       cursor: default;
       padding-top: 10px;
       position: relative;
-      z-index: 11;
+      z-index: 36;
 
       &:hover {
         border-bottom-left-radius: 0;
